--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,12 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  /* padding: 20px; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* justify-content: center; */
+  font-size: calc(12px + 0.5vmin);
   color: white;
 }
 
@@ -35,18 +36,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.card{
-  /* width: 100%; */
-  margin: 0 auto;
-  color: #aaa;
-  background-color: #fff;
-  padding: 5px 20px;
-  border-radius: 30px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.text{
-  color: black;
 }
